--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fastivite-graphql",
-  "version": "1.0.6",
+  "version": "1.0.9",
   "author": "Soedomoto <soedomoto@gmail.com>",
   "description": "Create monolithic app made easy by using combination of fastify + mercurius + mercurius-codegen and vite + graphql-codegen",
   "type": "module",
@@ -25,12 +25,14 @@
   "license": "ISC",
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@parcel/watcher": "^2.4.1",
+    "@swc/cli": "^0.3.12",
     "@types/lodash": "^4.17.5",
     "@types/node": "^20.14.2",
-    "commander": "^12.1.0",
     "concurrently": "^8.2.2",
+    "esbuild": "^0.21.5",
     "fastify": "^4.27.0",
-    "fastivite": "^1.0.6",
+    "fastivite": "^1.0.7",
     "glob": "^10.4.1",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
@@ -39,14 +41,10 @@
     "ts-node": "^10.9.2",
     "tsup": "^8.1.0",
     "tsx": "^4.15.2",
-    "typescript": "^5.2.2"
-  },
-  "peerDependencies": {
-    "@parcel/watcher": "^2.4.1",
-    "esbuild": "^0.21.5",
-    "vite": "^5.2.0"
+    "typescript": "^5.2.2",
+    "vite": "^5.2.13"
   },
   "dependencies": {
-    "@swc/cli": "^0.3.12"
+    "commander": "^12.1.0"
   }
 }
